<resources>
    <string name="app_name">GlobApp</string>
    <string name="news_item">News</string>
    <string name="notifications_item">Notifications</string>
    <string name="me_item">Me</string>
    <string name="admin_pane_item">Admin pane</string>
    <string name="login_message">A different social network</string>
    <string name="login_user_hint">Your username or e-mail</string>
    <string name="login_password_hint">Your password</string>
    <string name="login_button">Login</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_about">About</string>
    <string name="settings_language">Language</string>
    <string name="settings">Settings</string>
    <string name="settings_dark_mode">Dark mode</string>
    <string name="settings_logout">Logout</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="about_content">GlobApp, a project developed by Daniel Oyola, Donován Castrillón, José Blanco and Juan Muñoz.</string>
    <string name="notifications">Notifications</string>
    <string name="username">Username</string>
    <string name="comment">Comment</string>
    <string name="add_reaction">Add reaction</string>
    <string name="news">News</string>
    <string name="news_content">Post content</string>
    <string name="todo">TODO</string>
    <string name="recognitions">Recognitions</string>
    <string name="user_activity">User activity</string>
    <string name="give_star">Give star!</string>
    <string name="reaction">reaction</string>
    <string name="reactions">reactions</string>
    <string name="search_somenone">Search someone</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="type_to">Type something to</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="you_havent_picked_image">You haven´t picked Image</string>
    <string name="minimum_length_text">Minimum text length is 20 characters</string>
    <string name="maximum_length_text">Maximum text length is 300 characters</string>
    <string name="type_your_description">Type your description here</string>
    <string name="select_cover">Select your cover image</string>
    <string name="select_image">Select your profile image</string>
    <string name="edit_profile">Edit profile</string>
    <string name="continue1">Continue</string>
    <string name="select_your_language">Select your language</string>
    <string name="notification_news_text">just made a post. Comment it!</string>
    <string name="notification_news_image">just shared an image. Take a minute and see it!</string>
    <string name="notification_news_recognition_1">congratulated to</string>
    <string name="notification_news_recognition_2">! Type them a message</string>
    <string name="notification_news_recognition_you">congratulated you. Come and look!</string>
</resources>