<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/user_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="325dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_image"
                    android:src="@drawable/user"
                    android:layout_width="149dp"
                    android:translationZ="3dp"
                    android:outlineSpotShadowColor="#00FFFFFF"
                    android:layout_marginBottom="1dp"
                    android:layout_gravity="center|bottom"
                    android:layout_height="149dp" />

                <View
                    android:layout_gravity="center|bottom"
                    android:translationZ="3dp"
                    android:background="@drawable/ic_rounded_image_border_dark"
                    android:layout_width="150dp"
                    android:layout_height="150dp">
                </View>

                <androidx.cardview.widget.CardView
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="15dp"
                    android:layout_height="250dp">

                    <ImageView
                        android:id="@+id/user_cover_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/gloaa"/>
                </androidx.cardview.widget.CardView>
            </FrameLayout>

            <androidx.cardview.widget.CardView
                app:cardElevation="0dp"
                app:cardCornerRadius="10sp"
                app:cardBackgroundColor="@color/dark_item"
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/user_name"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:fontFamily="@font/opensemibold"
                        android:text="@string/username"
                        android:layout_height="wrap_content">
                    </TextView>

                    <TextView
                        android:id="@+id/user_description"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="20dp"
                        android:layout_width="match_parent"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:textSize="12sp"
                        android:fontFamily="@font/opensemibold"
                        android:text="@string/about_content"
                        android:layout_height="wrap_content">
                    </TextView>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <ImageButton
                android:id="@+id/user_star_button"
                android:background="@drawable/rounded_image_button"
                android:src="@drawable/ic_baseline_stars_24"
                android:scaleType="fitXY"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_width="70dp"
                android:layout_height="70dp">
            </ImageButton>

            <TextView
                android:text="@string/give_star"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:fontFamily="@font/openextrabold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </TextView>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/openbold"
                android:padding="20dp"
                android:text="@string/recognitions"
                android:textColor="@color/white"
                android:textSize="30sp">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_recognitions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/openbold"
                android:padding="20dp"
                android:text="@string/user_activity"
                android:textColor="@color/white"
                android:textSize="30sp">
            </TextView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/user_activity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>