<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/dark"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:layout_marginTop="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/create_profile_cancel_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="@color/dark_item"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/create_profile_continue_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:clickable="true"
                android:foreground="?android:selectableItemBackground"
                app:cardBackgroundColor="@color/dark_item"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.25">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/robotomedium"
                    android:gravity="center"
                    android:text="@string/continue1"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/create_profile_username"
                    android:text="@string/username"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:layout_margin="20dp"
                    android:textSize="25sp"
                    android:fontFamily="@font/robotobold"
                    android:layout_height="wrap_content">

                </TextView>

                <TextView
                    android:text="@string/select_image"
                    android:layout_width="match_parent"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotobold"
                    android:layout_height="wrap_content">

                </TextView>

                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="200dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/create_profile_user_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/user" />

                    <ImageButton
                        android:id="@+id/create_profile_user_image_button"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/rounded_image_button"
                        android:src="@drawable/ic_baseline_add_photo_alternate_24" />
                </RelativeLayout>

                <TextView
                    android:text="@string/select_cover"
                    android:layout_width="match_parent"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotobold"
                    android:layout_height="wrap_content">

                </TextView>

                <RelativeLayout
                    android:layout_gravity="center"
                    android:layout_margin="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="20dp"
                        app:cardElevation="0dp">

                        <ImageView
                            android:id="@+id/create_profile_cover_image"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/cover"
                            android:scaleType="centerCrop"
                            android:adjustViewBounds="true">

                        </ImageView>
                    </androidx.cardview.widget.CardView>

                    <ImageButton
                        android:id="@+id/create_profile_cover_image_button"
                        android:layout_margin="10dp"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="0dp"
                        android:layout_marginBottom="0dp"
                        android:background="@drawable/rounded_image_button"
                        android:src="@drawable/ic_baseline_add_photo_alternate_24" />
                </RelativeLayout>



                <TextView
                    android:text="@string/type_your_description"
                    android:layout_width="match_parent"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="20sp"
                    android:fontFamily="@font/robotobold"
                    android:layout_height="wrap_content">

                </TextView>

                <EditText
                    android:id="@+id/create_profile_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="#00000000"
                    android:fontFamily="@font/robotoregular"
                    android:hint="Type something :)"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:layout_marginBottom="50dp"
                    android:textColorHint="@color/light_gray"
                    android:textSize="17sp" />

            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>